# MiniFileManagementSystem

./: CMakeLists.txt  README.md  main.cpp
include/my_headers/: Solution1.h  Solution2.h  Solution3.h  Solution4.h
output/: main
output/main.dSYM/Contents/Resources/DWARF/: main
src/: Solution1.cpp  Solution2.cpp  Solution3.cpp  Solution4.cpp
